--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ body{
 }
 .login{
     overflow: hidden;
-    background-color: #f45b69;
+    background-color: #7a47ea;
     padding: 40px 30px 30px 30px;
     border-radius: 10px;
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 400px;
+    width: 500px;
     transform: translate(-50%,-50%);
     transition: transform 300ms,
           box-shadow 300ms;
@@ -32,7 +32,7 @@ body{
 .login::before{
     left: 30%;
     bottom: -120%;
-    background-color:    rgba(51, 122, 199 , 0.15);
+    background-color:    rgba(10, 150, 120 , 0.15);
     animation: wawes 6s infinite linear;
     -webkit-animation: wawe 6s infinite linear;
 }
@@ -47,10 +47,10 @@ body{
     display: block;
     border-radius: 5px;
     font-size: 16px;
-    background: rgb(95, 92, 92);
+    background: rgb(95, 92, 92, 0.7);
     width: 100%;
     border: 0;
-    padding: 10px 10px;
+    padding: 15px 10px;
     margin: 15px -10px;
     outline: none !important;
 }
@@ -59,17 +59,18 @@ body{
     color: rgb(173,118,118);
     font-size: 16px;
     text-transform: uppercase;
-    width: 100px;
+    
     border: 0;
-    padding: 10px 0;
+    padding: 10px 10px ;
     margin-top: 10px;
     margin-left: -5px;
+    margin-right: 50px;
     border-radius: 5px;
-    background: #000;
+    background: rgba(50,2,20,0.15) ;
     transition: background-color 300ms;
 }
 .login > button:hover{
-    background: #626262;
+    background: rgba(24, 215, 240 , 0.2);
     color: aliceblue;
 }
 @keyframes wawe{
@@ -96,3 +97,7 @@ a{
     font-size: 12px;
 
 }
+
+
+ 
+  
