--- a/css/style_header/style_header.css
+++ b/css/style_header/style_header.css
@@ -435,7 +435,8 @@ li:nth-last-child(3) {
     margin: 30px 0 0 0;
     position: relative;
     display: inline-block;
-    width: 50%;
+    max-width: 290px;
+    width: 100%;
     height: 34px;
   }
 
