--- a/css/style_header/style_header.css
+++ b/css/style_header/style_header.css
@@ -45,7 +45,7 @@ body {
   max-height: 100%;
   height: 100%;
   font-family: "Poppins", sans-serif;
-  background: #ffffff;
+  background: var(--color-accent);
 }
 
 aside,
@@ -129,6 +129,19 @@ legend {
   display: block;
 }
 
+/*Site theme*/
+
+.theme-light {
+  --color-accent: #ffffff;
+  --color-secondary: black;
+  --font-color: #22343d;
+}
+.theme-dark {
+  --color-accent: rgba(31, 46, 53, 1);
+  --color-secondary: #f3f3f3;
+  --font-color: #ffffff;
+}
+
 /*container style*/
 
 .container {
@@ -172,7 +185,7 @@ legend {
   font-weight: 700;
   font-size: 30px;
   line-height: 28px;
-  color: #173a56;
+  color: var(--font-color);
 }
 
 @media (max-width: 940px) {
@@ -199,11 +212,14 @@ legend {
   font-weight: 600;
   font-size: 16px;
   line-height: 28px;
-  color: #22343d;
+}
+
+a {
+  color: var(--font-color);
 }
 
 .navigaton_item:hover {
-  border: black solid;
+  border: var(--color-secondary) solid;
   border-radius: 4px;
   padding: 5px;
 }
@@ -240,7 +256,7 @@ li:nth-last-child(3) {
     width: 100%;
     height: 2px;
     position: absolute;
-    background-color: black;
+    background-color: var(--color-secondary);
     right: 0;
     top: 9px;
     transition-duration: 500ms;
@@ -249,7 +265,7 @@ li:nth-last-child(3) {
     content: "";
     width: 100%;
     height: 2px;
-    background-color: black;
+    background-color: var(--color-secondary);
     position: absolute;
     right: 0;
     top: 0;
@@ -259,7 +275,7 @@ li:nth-last-child(3) {
     content: "";
     width: 100%;
     height: 2px;
-    background-color: black;
+    background-color: var(--color-secondary);
     position: absolute;
     right: 0;
     bottom: 0;
@@ -405,7 +421,7 @@ li:nth-last-child(3) {
   content: "";
   position: absolute;
   top: 10%;
-  right: 7%;
+  right: 9%;
   width: 25px;
   height: 25px;
   border-radius: 50%;
@@ -416,7 +432,7 @@ li:nth-last-child(3) {
   content: "";
   position: absolute;
   top: 26%;
-  right: 24%;
+  right: 25%;
   width: 7px;
   height: 15px;
   border-radius: 0 50px 50px 0;
@@ -453,7 +469,7 @@ li:nth-last-child(3) {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: black;
     -webkit-transition: 1s;
     transition: 1s;
   }
