--- a/css/footer_style/footer.css
+++ b/css/footer_style/footer.css
@@ -28,7 +28,7 @@ li{
   list-style: none;
   text-decoration: none;
   text-transform: none;
-  margin: 10px; 
+  margin-top: 10px; 
 }
 a{
   text-decoration: none;
@@ -36,7 +36,7 @@ a{
 }
 .navigation_logo {
   display: flex;
-  align-items: flex-start;
+  /* align-items: flex-start; */
 }
 .Logo_text {
   margin-left: 15px;
@@ -64,7 +64,7 @@ a{
   border: 0;
   padding: 10px 10px ;
   margin-top: 10px;
-  margin-left: -5px;
+  margin-left: 0;
   margin-right: 50px;
   border-radius: 5px;
   background: #02897A ;
@@ -81,7 +81,8 @@ input{
   background: rgba(255, 255, 255, 0.7);
   width: 100%;
   padding: 15px 10px;
-  margin: 15px -10px;
+  
+  margin-top: 30px;
   
 }
 .social img{
