--- a/css/style_log and reg/style.css
+++ b/css/style_log and reg/style.css
@@ -4,7 +4,7 @@ body{
 }
 .login{
     overflow: hidden;
-    background-color: #5db374;
+    background-color: #9ec1a7;
     padding: 40px 30px 30px 30px;
     border-radius: 10px;
     position: absolute;
